# quadprec

./: .gitignore  Cargo.toml  LICENSE  README.md  gameplan.md
crates/compensated-sum/: Cargo.toml
crates/compensated-sum/src/: lib.rs
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/overlap/: Cargo.toml
crates/overlap/src/: assemble.rs  basis.rs  integral.rs  lib.rs  screen.rs
crates/quad/: Cargo.toml
crates/quad/src/: dd.rs  lib.rs  linalg.rs  num_impl.rs  simd.rs
crates/quad/src/multifloat/: add.rs  conv.rs  core.rs  div.rs  fmt.rs  linalg.rs  math.rs  mod.rs  mul.rs  tests.rs  traits.rs  transcendental.rs
crates/solver/: Cargo.toml  build.rs
crates/solver/src/: accelerate.rs  lib.rs  ortho.rs
