[package]
name = "hyperprec"
version.workspace = true
edition.workspace = true
description = "f128, f256, f512 in Rust — software-emulated extended precision via double-double and multi-limb arithmetic for ill-conditioned linear algebra"
license = "MIT"
repository = "https://github.com/m0at/quadprec"
readme = "../../README.md"
keywords = ["f128", "f256", "f512", "quad-precision", "linear-algebra"]
categories = ["mathematics", "science", "no-std::no-alloc"]

[features]
serde = ["dep:serde"]
num-traits = ["dep:num-traits"]

[dependencies]
rayon = { workspace = true }
serde = { version = "1", features = ["derive"], optional = true }
num-traits = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.9"
serde_json = "1"
